@@ -1,3 +1,10 @@
+2015-10-18  Ola Jeppsson  <ola@adapteva.com>
+
+	* dv-epiphany_mem.c (epiphany_mem_finish): Map address space
+	at bottom level so user-defined mappings will take precedence.
+	(static void epiphany_mem_signal): Adjust error messages to
+	match sim-core's.
+
 2015-10-16  Ola Jeppsson  <ola@adapteva.com>
 
 	* epiphany-fp.c: Remove dead code. Fix compiler
